--- a/projects.html
+++ b/projects.html
@@ -1,45 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projects Page</title>
-    <link rel="icon" href="logo.png" type="image/x-icon">
-    <style>
-      body {
-        cursor: url(cursor.png), auto;
-      }
-      .projectsimg {
-        position: absolute;
-        top: 0;
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Projects Page</title>
+  <link rel="icon" href="logo.png" type="image/x-icon">
+  <style>
+    body {
+      cursor: url(cursor.png), auto;
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #ffffff;
+      color: #333;
+    }
+
+    .projectsimg {
+        position: relative;
+        top: 60px;
         left: 0;
         width: 100%;
-        height: 100vh; /* Full screen height */
         background-size: cover;
         background-position: center;
         z-index: 1;
         border-bottom: solid rgba(0, 0, 0, 0.342);
       }
-      header {
-        width: 100%;
-        background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent background */
-        backdrop-filter: blur(10px); /* Blur effect for a modern look */
-        color: #333;
-        display: flex;
-        justify-content: space-between;
-        padding: 10px 20px; /* Adjust padding */
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); /* Soft shadow for depth */
-        position: fixed;
-        top: 0;
-        left: 0;
-        height: 50px;
-        z-index: 500;
-      }
-      header img {
-        height: 50px;
-      }
-      /* Hamburger Menu */
-      .nav-menu {
+
+    /* Header Styling */
+    header {
+      width: 100%;
+      background-color: rgba(255, 255, 255, 0.8);
+      backdrop-filter: blur(10px);
+      color: #333;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 20px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 60px;
+      z-index: 500;
+    }
+
+    header img {
+      height: 40px;
+    }
+
+     /* Hamburger Menu */
+     .nav-menu {
             position: fixed;
             top: 10px;
             right: 10px;
@@ -138,117 +147,130 @@
         .trans-nav-btn-menu {
             left: 60%;
         }
-        .content {
-          margin-top: 700px;
-          width: 100%;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          gap: 200px;
-        }
-        .projects {
-          width: 100%;
-          max-height: 621px;
-          margin-top: 100px;
-        }
-        .projects img{
-          width: 100%;
-          border-radius: 100px;
-          border-top: solid rgba(0, 0, 0, 0.1);
-          border-bottom: solid rgba(0, 0, 0, 0.1);
-          object-fit: fill;
-        }
-        .projects p {
-          position: relative;
-          z-index: 400;
-          color: white;
-          font-family: Arial, Helvetica, sans-serif;
-          font-weight: 900;
-          font-size: 80px;
-          text-align: center;
-          bottom: 500px;
-        }
-        @media (max-width: 1050px) {
-          .projectsimg {
-            position: absolute;
-            height: auto;
-        }
-        .content {
-          margin-top: 340px;
-        }
-        }
-    </style>
-  </head>
-  <body>
-    <header><img src="logoname.png"></header>
-    <div class="nav-menu">
-      <div>
-          <span class="line1"></span>
-          <span class="line2"></span>
-          <span class="line3"></span>
-      </div>
-  </div>
-  <div class="nav-btn-menu">
-      <button id="buttoni">•Home</button>
-      <button id="buttoniiiii">•Services</button>
-      <button id="buttonii">•About-us</button>
-      <button id="buttoniii">•Clients</button>
-      <button id="buttoniiiiii">•Contact-us</button>
-  </div>
-    <img src="projects.png" class="projectsimg">
-    <div class="content">
-        <div class="projects">
-          <img src="bg2.png">
-          <p>Commercial Buildings</p>
-        </div>
-        <div class="projects">
-          <img src="pro2.jpg">
-          <p>Health Care</p>
-        </div>
-        <div class="projects">
-          <img src="pro3.jpg">
-          <p>Admin Buildings</p>
-        </div>
-        <div class="projects">
-          <img src="pro4.jpg">
-          <p>Pharmaceutical Factories</p>
-        </div>
-        <div class="projects">
-          <img src="bg10.png">
-          <p>Residential Buildings</p>
-        </div>
-        <div class="projects">
-          <img src="pro6.jpg">
-          <p>Educational Buildings</p>
-        </div>
-      <div class="projectsectiontwo"></div>
-      <div class="projectsectionthree"></div>
+
+    /* Projects Section */
+    .content {
+      padding: 20px;
+      margin-top: 200px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 100px;
+    }
+
+    .projects {
+      width: 80%;
+      position: relative;
+      border-radius: 15%;
+      overflow: hidden;
+    }
+
+    .projects img {
+      width: 100%;
+      height: auto;
+      object-fit: cover;
+    }
+
+    .projects p {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 3rem;
+      font-weight: bold;
+      color: white;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+      margin: 0;
+      white-space: nowrap;
+    }
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+      header {
+        padding: 10px;
+      }
+
+      header img {
+        height: 30px;
+      }
+
+      .projects {
+        width: 90%;
+      }
+
+      .projects p {
+        font-size: 2.5rem;
+      }
+      .content {
+        margin-top: 100px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .projects p {
+        font-size: 2rem;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="nav-menu">
+    <div>
+        <span class="line1"></span>
+        <span class="line2"></span>
+        <span class="line3"></span>
     </div>
-    <script>
-      // Navigation Menu Toggle
-      let menu = document.querySelector('.nav-menu');
+</div>
+<div class="nav-btn-menu">
+    <button id="buttoni">•Home</button>
+    <button id="buttoniiiii">•Services</button>
+    <button id="buttonii">•About-us</button>
+    <button id="buttoniii">•Clients</button>
+    <button id="buttoniiiiii">•Contact-us</button>
+</div>
+
+  <header>
+    <img src="logoname.png" alt="Logo">
+  </header>
+  
+  <img src="projects.png" class="projectsimg" alt="Projects Background">
+  
+  <div class="content">
+    <div class="projects">
+      <img src="bg2.png">
+      <p>Commercial Buildings</p>
+    </div>
+    <div class="projects">
+      <img src="pro2.jpg">
+      <p>Health Care</p>
+    </div>
+    <div class="projects">
+      <img src="pro3.jpg">
+      <p>Admin Buildings</p>
+    </div>
+    <div class="projects">
+      <img src="pro4.jpg">
+      <p>Pharmaceutical Factories</p>
+    </div>
+    <div class="projects">
+      <img src="bg10.png">
+      <p>Residential Buildings</p>
+    </div>
+    <div class="projects">
+      <img src="pro6.jpg">
+      <p>Educational Buildings</p>
+    </div>
+  </div>
+  
+  <script>
+    // Navigation Menu Toggle
+    let menu = document.querySelector('.nav-menu');
       let menuBtn = document.querySelector('.nav-btn-menu');
 
       menu.addEventListener('click', () => {
           menu.classList.toggle('openmenu');
           menuBtn.classList.toggle('trans-nav-btn-menu');
       });
-      document.getElementById("buttoniii").addEventListener("click", function () {
-            window.location.href = "partners.html";
-        });
-        document.getElementById("buttoni").addEventListener("click", function () {
-            window.location.href = "index.html";
-        });
-        document.getElementById("buttoniiiii").addEventListener("click", function () {
-            window.location.href = "servises.html";
-        });
-        document.getElementById("buttonii").addEventListener("click", function () {
-            window.location.href = "index.html#content";
-        });
-
-        document.getElementById("buttoniiiiii").addEventListener("click", function () {
-            window.location.href = "index.html#final";
-        });
-    </script>
-  </body>
+  </script>
+</body>
 </html>
