--- a/projects.html
+++ b/projects.html
@@ -187,17 +187,20 @@
     }
 
     .projects p:hover {
-      transform: translate(-50%, -50%) scale(1.2) rotate(5deg);
       color: #FF8C00;
       text-shadow: 3px 3px 6px rgba(0, 0, 0, 1);
     }
 
     .projects p:active {
-      transform: translate(-50%, -50%) scale(1.1) rotate(-5deg);
       color: #cc3d00;
       text-shadow: 4px 4px 8px rgba(0, 0, 0, 1);
     }
 
+    @media (max-width: 1060px) {
+      .projects {
+        font-size: 2rem;
+      }
+    }
     /* Responsive Design */
     @media (max-width: 768px) {
       header {
