--- a/pro1.html
+++ b/pro1.html
@@ -152,25 +152,26 @@
       max-width: 800px;
       display: flex;
       flex-direction: column;
-      gap: 50px;
+      gap: 20px;
     }
 
     .carousel {
       position: relative;
       width: 100%;
-      height: 400px;
+      aspect-ratio: 16 / 9;
+      border-radius: 15px;
+      overflow: hidden;
     }
 
     .carousel img {
       width: 100%;
-      height: auto;
+      height: 100%;
       object-fit: cover;
       position: absolute;
       top: 0;
       left: 0;
       opacity: 0;
       transition: opacity 1s ease-in-out;
-      border-radius: 15px;
     }
 
     .carousel img.active {
@@ -179,7 +180,7 @@
 
     .dots {
       position: absolute;
-      bottom: 30px;
+      bottom: 15px;
       left: 50%;
       transform: translateX(-50%);
       display: flex;
@@ -202,7 +203,7 @@
 
     .carousel-content {
       text-align: center;
-      padding: 15px 20px;
+      margin-top: 15px;
     }
 
     .carousel-content h3 {
@@ -217,31 +218,20 @@
       font-size: 16px;
       color: #666;
     }
+
+    /* Responsive Dots Placement */
     @media (max-width: 900px) {
-      .dots{
-        bottom: 100px;
+      .dots {
+        bottom: 10px;
+      }
+      .nav-btn-menu {
+        width: 50%;
+      }
+      .trans-nav-btn-menu {
+        left: 50%;
       }
     }
-    @media (max-width: 720px) {
-      .dots{
-        bottom: 120px;
-      }
-    }
-    @media (max-width: 680px) {
-      .dots{
-        bottom: 150px;
-      }
-    }
-    @media (max-width: 600px) {
-      .dots{
-        bottom: 170px;
-      }
-    }
-    @media (max-width: 550px) {
-      .dots{
-        bottom: 200px;
-      }
-    }
+
   </style>
 </head>
 <body>
