--- a/pro1.html
+++ b/pro1.html
@@ -290,7 +290,6 @@
           <button></button>
           <button></button>
           <button></button>
-          <button></button>
         </div>
       </div>
       <div class="carousel-content">
@@ -298,7 +297,29 @@
         <p>SCOPE: Electromechanical works for 4 Branches</p>
       </div>
     </div>
+
+  <!-- third Project -->
+  <div class="projects">
+    <div class="carousel">
+      <img src="images/picture10.png" class="active" alt="Project Image 10">
+      <img src="images/picture11.png" alt="Project Image 11">
+      <img src="images/picture12.png" alt="Project Image 12">
+      <img src="images/picture13.png" alt="Project Image 13">
+      <img src="images/picture14.png" alt="Project Image 14">
+      <div class="dots">
+        <button class="active"></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+      </div>
+    </div>
+    <div class="carousel-content">
+      <h3>Almasa cap floor</h3>
+      <p>SCOPE: Supply & install HVAC & Mechanical  works  for the Top floor with area 3000 m2</p>
+    </div>
   </div>
+</div>
 
   <script>
     const carousels = document.querySelectorAll('.projects');
