--- a/pro2.html
+++ b/pro2.html
@@ -246,14 +246,14 @@
 
     .carousel-content h3 {
       margin: 0;
-      font-size: 24px;
+      font-size: 30px;
       font-weight: bold;
       color: #333;
     }
 
     .carousel-content p {
       margin: 5px 0 0;
-      font-size: 16px;
+      font-size: 23px;
       color: #666;
     }
 
@@ -338,9 +338,9 @@
     <!-- second Project -->
   <div class="projects">
     <div class="carousel">
-      <img src="images/admin10.png" class="active" alt="Project Image 10">
-      <img src="images/admin11.png" alt="Project Image 11">
-      <img src="images/admin12.png" alt="Project Image 12">
+      <img src="images/fact10.png" class="active" alt="Project Image 10">
+      <img src="images/fact11.png" alt="Project Image 11">
+      <img src="images/fact12.png" alt="Project Image 12">
       <div class="dots">
         <button class="active"></button>
         <button></button>
